# japanese-desktop-dictionary

./: .gitignore  Cargo.toml  LICENSE  README.md  dict.org
src/: example_sentences.rs  jisho.rs  main.rs
